--- a/Client.Api/Web.config
+++ b/Client.Api/Web.config
@@ -14,7 +14,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=giglob;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Data Source=.\SQLEXPRESS2012;Initial Catalog=giglob;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -63,6 +63,7 @@
   </runtime>
   <elmah>
     <security allowRemoteAccess="true" />
+    <errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="Elmah"/>
   </elmah>
   <location path="elmah.axd" inheritInChildApplications="false">
     <system.web>
