--- a/Client.Api.v1/packages.config
+++ b/Client.Api.v1/packages.config
@@ -3,6 +3,7 @@
   <package id="Expressmapper" version="1.8.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Swashbuckle.Core" version="5.3.2" targetFramework="net452" />
 </packages>
