--- a/ApiVersioningModule.Swagger/ApiVersioningModule.Swagger.csproj
+++ b/ApiVersioningModule.Swagger/ApiVersioningModule.Swagger.csproj
@@ -12,6 +12,8 @@
     <AssemblyName>ApiVersioningModule.Swagger</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
