Подготовил клиентский интерфейс для страницы конкретного предложения объекта недвижимости

--- a/Client.Api.v1.Models/Client.Api.v1.Models.csproj
+++ b/Client.Api.v1.Models/Client.Api.v1.Models.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Models\Home\ResponseExamples\DataModelResponseExample.cs" />
     <Compile Include="Models\Home\ResponseExamples\StationModelResponseExample.cs" />
     <Compile Include="Models\Home\StationModel.cs" />
+    <Compile Include="Models\PropertyOffer\Examples\PropertyOfferGetResponseExample.cs" />
     <Compile Include="Models\PropertyOffer\PropertyOfferCreateNearMetroStationRequestModel.cs" />
     <Compile Include="Models\PropertyOffer\PropertyOfferCreateRequestModel.cs" />
     <Compile Include="Models\PropertyOffer\PropertyOfferCreatePhotoRequestModel.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="Extensions\ContainerExtensions.cs" />
     <Compile Include="Models\Common\ResponseExamples\BadRequestResponseExampleProvider.cs" />
     <Compile Include="Models\PropertyOffer\PropertyOfferExchangeDetailsModel.cs" />
+    <Compile Include="Models\PropertyOffer\PropertyOfferModel.cs" />
     <Compile Include="Models\PropertyOffer\Validators\PropertyOfferCreateRequestModelValidator.cs" />
     <Compile Include="Models\User\AuthResultModel.cs" />
     <Compile Include="Models\User\Mail\UserConfirmationMailModel.cs" />
