--- a/Client.Api.v1.Models/Client.Api.v1.Models.csproj
+++ b/Client.Api.v1.Models/Client.Api.v1.Models.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Models\Common\ResponseExamples\BadRequestResponseExampleProvider.cs" />
     <Compile Include="Models\PropertyOffer\PropertyOfferDataModel.cs" />
     <Compile Include="Models\PropertyOffer\PropertyOfferExchangeDetailsModel.cs" />
+    <Compile Include="Models\PropertyOffer\PropertyOfferGetOffersRequestModel.cs" />
     <Compile Include="Models\PropertyOffer\ResponseExamples\OffersModelResponseExample.cs" />
     <Compile Include="Models\PropertyOffer\Validators\PropertyOfferCreateRequestModelValidator.cs" />
     <Compile Include="Models\User\AuthResultModel.cs" />
