реализовал выдачу информации для страницы конкретного предложения объекта недвижимости

--- a/Client.Api.v1.Models/Client.Api.v1.Models.csproj
+++ b/Client.Api.v1.Models/Client.Api.v1.Models.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Extensions\ContainerExtensions.cs" />
     <Compile Include="Models\Common\ResponseExamples\BadRequestResponseExampleProvider.cs" />
     <Compile Include="Models\PropertyOffer\PropertyOfferExchangeDetailsModel.cs" />
+    <Compile Include="Models\PropertyOffer\PropertyOfferGetRequestModel.cs" />
     <Compile Include="Models\PropertyOffer\PropertyOfferModel.cs" />
     <Compile Include="Models\PropertyOffer\Validators\PropertyOfferCreateRequestModelValidator.cs" />
     <Compile Include="Models\User\AuthResultModel.cs" />
