реализовал выдачу информации для страницы конкретного предложения объекта недвижимости

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Client.Web/Scripts/node_modules
 Client.Web/Scripts/app/**/*.css
 Client.Web/Scripts/index.html
 Client.Web/Scripts/dist
+Client.Api/storage/
