--- a/Client.Api.v1/packages.config
+++ b/Client.Api.v1/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Expressmapper" version="1.8.1" targetFramework="net452" />
   <package id="FluentMailer" version="1.1.4" targetFramework="net452" />
   <package id="FluentMailer.Factory" version="1.1.4" targetFramework="net452" />
