--- a/Client.Api/Web.config
+++ b/Client.Api/Web.config
@@ -17,7 +17,7 @@
     <add name="Default" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=giglob;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
