--- a/Client.Web/Web.Debug.config
+++ b/Client.Web/Web.Debug.config
@@ -1,3 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+  <appSettings>
+    <add xdt:Locator="Match(key)" xdt:Transform="SetAttributes" key="ApiUrl" value="http://api.giglob.local" />
+  </appSettings>
 </configuration>
