--- a/Client.Web/Web.config
+++ b/Client.Web/Web.config
@@ -4,8 +4,11 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <add key="ApiUrl" value="http://api.giglob.local"/>
+  </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2"/>
+    <compilation targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
   <runtime>
