--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Client.Web/Scripts/app/**/*.css
 Client.Web/Scripts/index.html
 Client.Web/Scripts/dist
 Client.Api/storage/
+Client.Web/Views/Index.cshtml
