--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Client.Web/Scripts/index.html
 Client.Web/Scripts/dist
 Client.Api/storage/
 Client.Web/Views/Index.cshtml
+Client.Api/mailSettings.config
