добавил файлы, собирающиеся gulp-ом в игнор

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ Client.Web/Scripts/dist
 Client.Api/storage/
 Client.Web/Views/Index.cshtml
 Client.Api/mailSettings.config
+Client.Web/Content/Images/
+Client.Web/Views/styles/app.css
