включил в проект все содержимое папки Content

--- a/Client.Web/Client.Web.csproj
+++ b/Client.Web/Client.Web.csproj
@@ -115,8 +115,7 @@
     <Content Include="packages.config" />
     <Content Include="Views\**\*.*" />
     <Content Include="Scripts\dist\**\*.*" />
-    <Content Include="Content\Images\**\*.*" />
-    <Content Include="Content\Styles\**\*.*" />
+    <Content Include="Content\**\*.*" />
     <Content Include=".bowerrc" />
     <Content Include="bower.json" />
     <None Include="Properties\PublishProfiles\TestPackage.pubxml" />
