--- a/Client.Api/Client.Api.csproj
+++ b/Client.Api/Client.Api.csproj
@@ -1,4 +1,4 @@
-﻿﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\Microsoft.Net.Compilers.1.3.2\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.1.3.2\build\Microsoft.Net.Compilers.props')" />
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.1\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.1\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
@@ -188,6 +188,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="Swagger\OperationFilters\ResolveDuplicateParametersOperationFilter.cs" />
+    <Compile Include="Tools\Implementation\VirtualPathUtility.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ApiVersioningModule.Swagger\ApiVersioningModule.Swagger.csproj">
@@ -198,6 +199,10 @@
       <Project>{14983888-7213-46b4-a2a5-97774b02c64f}</Project>
       <Name>ApiVersioningModule</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Client.Api.Authentication\Client.Api.Authentication.csproj">
+      <Project>{5a4ef52a-03be-4ba3-bb4b-7d5bae2f2678}</Project>
+      <Name>Client.Api.Authentication</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Client.Api.v1\Client.Api.v1.csproj">
       <Project>{a226d174-6dd2-4290-8dbc-e201efc54789}</Project>
       <Name>Client.Api.v1</Name>
@@ -205,6 +210,14 @@
     <ProjectReference Include="..\Domain.Persistence.EntityFramework\Domain.Persistence.EntityFramework.csproj">
       <Project>{a54fcb68-ee21-4f16-ae8f-9b725c1d0c6e}</Project>
       <Name>Domain.Persistence.EntityFramework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Domain.Persistence.FileStorage\Domain.Persistence.FileStorage.csproj">
+      <Project>{0cb8fb68-a755-48be-bc3f-4991e46ef3c7}</Project>
+      <Name>Domain.Persistence.FileStorage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Domain.Persistence.File\Domain.Persistence.File.csproj">
+      <Project>{717604b5-8cec-4bde-86aa-ad06542e0661}</Project>
+      <Name>Domain.Persistence.File</Name>
     </ProjectReference>
     <ProjectReference Include="..\Domain\Domain.csproj">
       <Project>{13607ee9-8b76-4fe3-bcf2-0c09eef929bb}</Project>
@@ -256,7 +269,7 @@
   <Target Name="BeforeBuild">
     <TransformXml Source="Web.config" Transform="Web.$(Configuration).config" Destination="Web.config" />
   </Target>
-<!--
+  <!--
   <Target Name="AfterBuild">
   </Target>
   -->
