--- a/Client.Api/Web.Debug.config
+++ b/Client.Api/Web.Debug.config
@@ -5,6 +5,7 @@
   </appSettings>
   <connectionStrings>
     <add xdt:Locator="Match(name)" xdt:Transform="SetAttributes" name="Default" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=giglob;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add xdt:Locator="Match(name)" xdt:Transform="Remove" name="Elmah" />
   </connectionStrings>
   <elmah>
     <security xdt:Transform="SetAttributes" allowRemoteAccess="true" />
