--- a/Client.Api/Web.Test.config
+++ b/Client.Api/Web.Test.config
@@ -5,6 +5,7 @@
   </appSettings>
   <connectionStrings>
     <add xdt:Locator="Match(name)" xdt:Transform="SetAttributes" name="Default" connectionString="Data Source=.\SQLEXPRESS2012;Initial Catalog=giglob;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add xdt:Locator="Match(name)" xdt:Transform="InsertIfMissing" name="Elmah" connectionString="Data Source=.\SQLEXPRESS2012;Initial Catalog=giglob-api-elmah;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <elmah>
     <security xdt:Transform="SetAttributes" allowRemoteAccess="true" />
