Added app.css to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,4 @@ Client.Api/storage/
 Client.Web/Views/Index.cshtml
 Client.Api/mailSettings.config
 Client.Web/Content/Images/
-Client.Web/Views/styles/app.css
+Client.Web/Content/styles/app.css
