--- a/Client.Api/Web.config
+++ b/Client.Api/Web.config
@@ -12,9 +12,11 @@
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah"/>
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah"/>
     </sectionGroup>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <add key="WebUrl" value="http://giglob.local"/>
+    <add key="WebUrl" value="http://giglob.local" />
   </appSettings>
   <connectionStrings>
     <add name="Default" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=giglob;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
@@ -93,4 +95,10 @@
       </handlers>
     </system.webServer>
   </location>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
