--- a/Client.Api/Client.Api.csproj
+++ b/Client.Api/Client.Api.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="Swagger\OperationFilters\ResolveDuplicateParametersOperationFilter.cs" />
+    <Compile Include="Tools\Implementation\VirtualPathUtility.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ApiVersioningModule.Swagger\ApiVersioningModule.Swagger.csproj">
@@ -216,6 +217,14 @@
     <ProjectReference Include="..\Domain.Persistence.EntityFramework\Domain.Persistence.EntityFramework.csproj">
       <Project>{a54fcb68-ee21-4f16-ae8f-9b725c1d0c6e}</Project>
       <Name>Domain.Persistence.EntityFramework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Domain.Persistence.FileStorage\Domain.Persistence.FileStorage.csproj">
+      <Project>{0cb8fb68-a755-48be-bc3f-4991e46ef3c7}</Project>
+      <Name>Domain.Persistence.FileStorage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Domain.Persistence.File\Domain.Persistence.File.csproj">
+      <Project>{717604b5-8cec-4bde-86aa-ad06542e0661}</Project>
+      <Name>Domain.Persistence.File</Name>
     </ProjectReference>
     <ProjectReference Include="..\Domain\Domain.csproj">
       <Project>{13607ee9-8b76-4fe3-bcf2-0c09eef929bb}</Project>
