--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ Client.Web/Views/Index.cshtml
 Client.Api/mailSettings.config
 Client.Web/Content/Images/
 Client.Web/Views/styles/app.css
+
+/packages
