--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/packages/
+﻿packages/
 bin/
 obj/
 .vs/
@@ -15,5 +15,3 @@ Client.Web/Views/Index.cshtml
 Client.Api/mailSettings.config
 Client.Web/Content/Images/
 Client.Web/Content/styles/app.css
-
-
