--- a/Client.Api.v1/packages.config
+++ b/Client.Api.v1/packages.config
@@ -5,8 +5,10 @@
   <package id="FluentMailer" version="1.1.4" targetFramework="net452" />
   <package id="FluentMailer.Factory" version="1.1.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="RazorEngine" version="3.0.0" targetFramework="net452" />
