--- a/Domain.Persistence.EntityFramework.Tests/packages.config
+++ b/Domain.Persistence.EntityFramework.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
+  <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
   <package id="Moq" version="4.5.13" targetFramework="net452" />
   <package id="NUnit" version="3.4.1" targetFramework="net452" />
   <package id="SimpleInjector" version="3.2.0" targetFramework="net452" />
