реализовал 404, если файла с указанным идентификатором нет

--- a/Client.Api/Client.Api.csproj
+++ b/Client.Api/Client.Api.csproj
@@ -180,6 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionFilters\ModelStateValidatorActionFilter.cs" />
+    <Compile Include="ActionFilters\NotFoundActionFilter.cs" />
     <Compile Include="App_Start\ElmahConfiguration.cs" />
     <Compile Include="App_Start\FluentValidationConfiguration.cs" />
     <Compile Include="App_Start\JsonFormatterConfiguration.cs" />
