фикс, Resharper выдавал сообщение, что раздел location в Web.config не нужен

--- a/Client.Api/Web.config
+++ b/Client.Api/Web.config
@@ -85,6 +85,8 @@
   <elmah>
     <security allowRemoteAccess="true" />
   </elmah>
+  
+  <!-- ReSharper disable once WebConfig.RedundantLocationTag -->
   <location path="elmah.axd" inheritInChildApplications="false">
     <system.web>
       <httpHandlers>
