--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Entities\Implementation\File\Queries\File_HasFilesWithGivenIdsAndExtensionsQuery.cs" />
     <Compile Include="Entities\Implementation\PropertyOffer\Dtos\PropertyOfferExchangeContext.cs" />
     <Compile Include="Entities\Implementation\PropertyOffer\Dtos\ViewPortDto.cs" />
+    <Compile Include="Entities\Implementation\PropertyOffer\Enums\RoomCount.cs" />
     <Compile Include="Entities\Implementation\PropertyOffer\PropertyExchangeDetails.cs" />
     <Compile Include="Entities\Implementation\PropertyOffer\Queries\PropertyOffer_GetAllQuery.cs" />
     <Compile Include="Entities\Implementation\PropertyOffer\Queries\PropertyOffer_GetUserOffersQuery.cs" />
