--- a/Domain.YandexGeocoder/packages.config
+++ b/Domain.YandexGeocoder/packages.config
@@ -4,4 +4,5 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="SimpleInjector" version="3.2.0" targetFramework="net452" />
+  <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
 </packages>
